updating content/_index.md file Nivesh-goyal/devtron_documentation@48c07c50deefb2ae2e683aa0933cd7192f6ca622

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ https://github.com/alex-shpak/hugo-book
       
   <article class="markdown"><h1 id="devtron-documentation">Devtron Documentation</h1>
 <p>Continuous Deployment for Kubernetes that increases your productivity and reduces cost.</p>
-<p><a href="https://docs.devtron.ai/docs/reference/creating-application/">Browse Devtron Documentation</a></p>
+<p><a href="https://www.niveshopstree.tk/docs/reference/creating-application/">Browse Devtron Documentation</a></p>
 </article>
  
       
